# ga_feature_selection

./: .gitignore  README.md  sample_dataset.csv
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/ga/: __init__.py  genetic_algorithm.py
backend/ml/: __init__.py  evaluator.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AccuracyChart.jsx  EvolutionChart.jsx  GAConfigForm.jsx  Navbar.jsx  UI.jsx
frontend/src/context/: GAContext.jsx  index.js
frontend/src/pages/: Home.jsx  Results.jsx  Simulation.jsx  Upload.jsx
frontend/src/services/: api.js
