[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "pydantic==2.7.1",
    "python-multipart==0.0.9",
    "scikit-learn==1.4.2",
    "uvicorn[standard]==0.29.0",
]
